# Artificiellalecta

./: .env.example  .gitignore  ATT_GORA.md  BESLUTSLOGG.md  CLAUDE.md  DEMO_ANTECKNINGAR.md  MASTER_CONTEXT.md  README.md  cowork-instruktioner.md  pyproject.toml
01_domän/: ITP1_regelverk.md  försäkringsvillkor.md
02_system/: agentkarta.md  databasschema.md
02_system/Agentsystem/: regelförändringsflöde.md
02_system/agenter/: aktuarieagent.md  compliance-agent.md  data-scientist-agent.md  ekonomiagent.md  handlaggaragent.md  inkopsagent.md  kommunikationsagent.md  portfoljforvaltningsagent.md  rapporteringsagent.md  utvecklaragent.md
03_skills/: skillkatalog.md
03_skills/beräkning/: beräkna-itp1-premie.md
04_regulatoriskt/: regelverkskarta.md
scripts/: create_tables.py  generate_mock_data.py  generate_premium_history.py  rebuild_insurance_tables.py  seed_base_amounts.py  seed_supabase.py  test_db_connection.py
src/models/: __init__.py  base.py  base_amount.py  employer.py  insured_person.py  policy.py  policy_benefit.py  policy_state.py  premium_transaction.py
src/skills/calculation/: calculate_itp1_premium.py
src/utils/: db.py
tests/: test_calculate_itp1_premium.py
