[project]
name = "artificiellalecta"
version = "0.1.0"
description = "Simulerat tjänstepensionsbolag för ITP1 ålderspension"
requires-python = ">=3.11"
dependencies = [
    # Beslutas efterhand. Förslag att komma:
    # "sqlalchemy>=2.0",
    # "psycopg2-binary",
    # "python-dotenv",
    # "anthropic",
    # "openai",
    # "litellm",
]

[project.optional-dependencies]
dev = [
    # "pytest",
    # "ruff",
    # "mypy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
