[project]
name = "artificiellalecta"
version = "0.1.0"
description = "Simulerat tjänstepensionsbolag för ITP1 ålderspension"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    # AI-leverantörer beslutas/aktiveras i samband med AI-abstraktionslagret
    # "anthropic",
    # "openai",
    # "litellm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
